# cows_and_bulls

./: .gitignore  .gitmodules  CMakeLists.txt
core/: CMakeLists.txt
core/include/: Game.h  Number.h  Numbers.h  Result.cpp  Result.h  create_numbers.py  utils.h
core/src/: Game.cpp  Number.cpp  Numbers.cpp  generate_numbers.py
example/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  NumberTest.cpp  ResultTest.cpp  Test.cpp
